@@ -41,6 +41,7 @@ filterChain             =
 [path]
 additionalIncludePath   =
 moduleDirOverride       =
+uploadDirOverride       =
 
 [cookie]
 path                    = /
