@@ -6,6 +6,7 @@ svbCHANGELOG
 BUGFIXES
 
 IMPROVEMENTS
+01-05-06    You can now customise the location of the upload directory
 30-04-06    HTML date widget cleanup
 30-04-06    Module generator can now add additional managers per module
 27-04-06    Wizard functionality reinstated (Steven Stremciuc)
